--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,7 @@ python-dotenv==1.0.1
 pydantic==2.9.0
 pydantic-settings==2.5.2
 alembic==1.14.0
+qdrant-client==1.9.0
+numpy==1.26.4
+gspread==6.1.4
+google-auth==2.35.0
