--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,16 @@ services:
       - "5432:5432"
     volumes:
       - exi_db_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U exi_user -d exi_db"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+
+  qdrant:
+    image: qdrant/qdrant:v1.11.0
+    container_name: exi_qdrant
+    restart: unless-stopped
+    ports:
+      - "6333:6333"
+    volumes:
+      - exi_qdrant_data:/qdrant/storage
+
   backend:
     build:
       context: ./backend
@@ -28,9 +33,17 @@ services:
       POSTGRES_USER: exi_user
       POSTGRES_PASSWORD: exi_password
       POSTGRES_DB: exi_db
+
+      GOOGLE_SERVICE_ACCOUNT_FILE: /app/credentials/service-account.json
+      SHEET_SYNC_INTERVAL_SECONDS: 60
+
+      QDRANT_HOST: qdrant
+      QDRANT_PORT: 6333
+      QDRANT_COLLECTION_RENTALS: rentals
+      QDRANT_EMBED_DIM: 768
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+      - qdrant
     ports:
       - "8000:8000"
     command: >
@@ -38,6 +51,10 @@ services:
       --host 0.0.0.0
       --port 8000
       --reload
+    volumes:
+      - ./backend/app:/app/app
+      - ./backend/credentials:/app/credentials  # put service-account.json here
 
 volumes:
   exi_db_data:
+  exi_qdrant_data:
